Ingreso de datos okk

--- a/public/views/cliente/ingreso_datos/index.html
+++ b/public/views/cliente/ingreso_datos/index.html
@@ -59,7 +59,7 @@
                     <option value="octubre">Octubre</option>
                     <option value="noviembre">Noviembre</option>
                     <option value="diciembre">Diciembre</option>
-                    <option value="year">Anual</option>
+                    <option value="anual">Anual</option>
                 </select>
                 <button type="button" class="btn-consultar" id="btn-consultar">Consultar</button>
              </div>   
