POIR ingreso ok

--- a/public/views/cliente/ingreso_datos/index.html
+++ b/public/views/cliente/ingreso_datos/index.html
@@ -38,6 +38,9 @@
                         <option value="redalcantarillado">Red Alcantarillado</option>
                         <option value="energia">Energia</option>
                         <option value="personal">Personal</option>
+                        <option value="financiero">Financiero</option>
+                        <option value="eventos_climaticos">Eventos Climáticos</option>
+                        <option value="poir">POIR</option> 
                     </select>
                     <select name="servicio" class="select-servicio" id="servicio" >
                         <option value="" disabled selected>Servicio</option>
@@ -59,7 +62,7 @@
                     <option value="octubre">Octubre</option>
                     <option value="noviembre">Noviembre</option>
                     <option value="diciembre">Diciembre</option>
-                    <option value="anual">Anual</option>
+                    <option value="Anual">Anual</option>
                 </select>
                 <button type="button" class="btn-consultar" id="btn-consultar">Consultar</button>
              </div>   
