Tarifas acu alc ingreso de datos ok

--- a/public/views/cliente/ingreso_datos/index.html
+++ b/public/views/cliente/ingreso_datos/index.html
@@ -41,6 +41,9 @@
                         <option value="financiero">Financiero</option>
                         <option value="eventos_climaticos">Eventos Climáticos</option>
                         <option value="poir">POIR</option> 
+                        <option value="tarifa_acu">Tarifa Acueducto</option>
+                        <option value="tarifa_alc">Tarifa Alcantarillado</option>
+                        
                     </select>
                     <select name="servicio" class="select-servicio" id="servicio" >
                         <option value="" disabled selected>Servicio</option>
