IRCA ingreso datos ok

--- a/public/views/cliente/ingreso_datos/index.html
+++ b/public/views/cliente/ingreso_datos/index.html
@@ -43,6 +43,8 @@
                         <option value="poir">POIR</option> 
                         <option value="tarifa_acu">Tarifa Acueducto</option>
                         <option value="tarifa_alc">Tarifa Alcantarillado</option>
+                        <option value="irca">IRCA</option>
+
                         
                     </select>
                     <select name="servicio" class="select-servicio" id="servicio" >
