--- a/public/views/cliente/ingreso_datos/index.html
+++ b/public/views/cliente/ingreso_datos/index.html
@@ -44,6 +44,7 @@
                         <option value="tarifa_acu">Tarifa Acueducto</option>
                         <option value="tarifa_alc">Tarifa Alcantarillado</option>
                         <option value="irca">IRCA</option>
+                        <option value="metas_calidad">Metas de Calidad</option>
 
                         
                     </select>
