Cuestionario ingreso datos ok

--- a/public/views/cliente/panel_control/index.html
+++ b/public/views/cliente/panel_control/index.html
@@ -23,8 +23,11 @@
                         <option value="2025">Vigencia 2025</option>
                         <option value="2026">Vigencia 2026</option>
                     </select>
+             <button type="button" class="btn-consultar" id="btn-consultar-panel">Consultar</button>
+             </div>   
+             <div class="content-input" id="content-input">
+
              </div>
-           
              
         </nav>
         <script src="../../../public/js/dashboard.js"></script>
