--- a/public/views/cliente/ingreso_datos/index.html
+++ b/public/views/cliente/ingreso_datos/index.html
@@ -45,6 +45,8 @@
                         <option value="tarifa_alc">Tarifa Alcantarillado</option>
                         <option value="irca">IRCA</option>
                         <option value="metas_calidad">Metas de Calidad</option>
+                        <option value="cuestionario">Cuestionario</option>
+
 
                         
                     </select>
