--- a/public/views/cliente/panel_control/index.html
+++ b/public/views/cliente/panel_control/index.html
@@ -23,13 +23,12 @@
                         <option value="2025">Vigencia 2025</option>
                         <option value="2026">Vigencia 2026</option>
                     </select>
-             <button type="button" class="btn-consultar" id="btn-consultar-panel">Consultar</button>
+             <button type="button" class="btn-consultar-panel" id="btn-consultar-panel">Consultar</button>
              </div>   
-             <div class="content-input" id="content-input">
+             <div class="content-panel" id="content-panel">
 
              </div>
              
         </nav>
-        <script src="../../../public/js/dashboard.js"></script>
     </body>
 </html>
